--- a/earthquake/Base.lproj/MainMenu.xib
+++ b/earthquake/Base.lproj/MainMenu.xib
@@ -603,7 +603,7 @@
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                         <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                                         <tableColumns>
-                                                            <tableColumn identifier="filename" width="445" minWidth="40" maxWidth="1000" id="KHW-gR-6ID">
+                                                            <tableColumn identifier="filename" editable="NO" width="445" minWidth="40" maxWidth="1000" id="KHW-gR-6ID">
                                                                 <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="File">
                                                                     <font key="font" metaFont="smallSystem"/>
                                                                     <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
